log/darts+dngo-model.metagpu9.3276713.err
Traceback (most recent call last):
  File "darts-bohamiann.py", line 13, in <module>
    from fmin.bohamiann import bohamiann
  File "/home/rkohli/aml-project/PC-DARTS/fmin/bohamiann.py", line 15, in <module>
    from utils import get_config_dictionary
  File "/home/rkohli/aml-project/PC-DARTS/utils.py", line 160
    with open(os.path.join(path, 'results.txt', 'w') as write:
                                                      ^
SyntaxError: invalid syntax
